# commands-mcp

./: .dxtignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  manifest.json  master.json  npm-wrapper.mjs  package-lock.json  package.json  rollup.config.mjs  tsdown.config.ts  tsdown.plugin-hbs.ts  v1.json
.github/workflows/: build.yml  schema.yml
docs/: schematic.md
master/: commands.json  schematic-app.json  schematic-board.json  schematic-soc.json
src/: app.module.ts  args.module.ts  commands.module.ts  commands.rs  commands.schema.ts  commands.tool.ts  commands_flash.rs  commands_inspector.rs  commands_schematic.rs  commands_serial.rs  error.rs  inspector.rs  inspector_device.rs  main.rs  main.ts  manifest.rs  manifest_executor.rs  manifest_reader.rs  manifest_schema.rs  schema-exporter.ts  schematic.rs  schematic_lookup.rs  schematic_reader.rs  shims-hbs.d.ts
src/prompts/: execute.hbs  explore_commands.hbs
