[package]
name = "commands-mcp"
version = "0.10.0"
authors = ["xychen <xychen@listenai.com>"]
edition = "2024"
description = "Build MCP Server with command template"
repository = "https://github.com/LISTENAI/commands-mcp"
license = "Apache-2.0"
publish = false

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["cargo", "derive"] }
cskburn = { git = "ssh://git@github.com/LISTENAI/cskburn-rs.git", tag = "2.0.0-beta.0" }
handlebars = "6.3.2"
jsonschema = "0.30.0"
rmcp = { version = "0.2.1", features = ["macros", "server", "transport-io"] }
schemars = { version = "1.0.3", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
serialport = "4.7.2"
thiserror = "2.0.12"
tokio = { version = "1.46.0", features = ["rt-multi-thread"] }

[build-dependencies]
schemars = "1.0.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
